# shik-treesitter

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  install.sh  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-shik.pc.in
bindings/c/tree_sitter/: tree-sitter-shik.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_shik/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterShikTests/: TreeSitterShikTests.swift
queries/shik/: highlights.scm
src/: grammar.json  node-types.json  parser.c
